--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,12 +4,13 @@
 <head>
     <title> Eat Tha Burger</title>
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    {{!-- <script src="/public/assets/js/burgers.js"></script> --}}
     <script src="https://code.jquery.com/jquery.js"></script>
-    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
         integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
-    <script src="/public/assets/js/burgers.js"></script>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+
 </head>
 
 <body>
