styling/updates added

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,9 +3,12 @@
 
 <head>
     <title> Eat Tha Burger</title>
+    <!-- CSS/Google Fonts-->
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
-    {{!-- <script src="/public/assets/js/burgers.js"></script> --}}
+    <link href="https://fonts.googleapis.com/css?family=Kaushan+Script&display=swap" rel="stylesheet">
+    <!-- JQuery-->
     <script src="https://code.jquery.com/jquery.js"></script>
+    <!-- Bootstrap-->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"
         integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa"
         crossorigin="anonymous"></script>
