--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,30 +1,22 @@
 body {
     background-image: url("http://www.sclance.com/backgrounds/burger-background/burger-background_461862.jpg");
 }
- #title {
+ #animaterubberBand{
     text-align: center !important;
     color: white;
-    font-size: 40px;
+    font-size: 60px;
+    font-family: 'Kaushan Script', cursive;
 }
-.add {
+.burgermenu, .eaten {
     color: white;
-    font-size: 24px;
+    font-size: 38px;
+    font-family: 'Kaushan Script', cursive;
 }
-#burgernew {
-    text-align: center !important;
+.text {
     color: white;
+    font-size: 38px;
+    font-family: 'Kaushan Script', cursive;
 }
-.burger-menu {
-    color: white;
-}
-.devour {
-    color: red;
-}
-.bu {
-    color: white;
-    font-size: 14px;
-}
-.text, .burgereat, .eaten {
-    color: white;
-    font-size: 20px;
+#insertBurger {
+    width: 300px;
 }
