--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,9 +1,19 @@
 <div class="container">
-  <h1 id="title">Eat Tha Burgers!</h1>
+  <h1 id="animaterubberBand">Eat Tha Burgers!</h1>
+</div>
+<!-- Spacers from title-->
+<div class="container">
+  <div class="col-lg-12">
+  </div>
 </div>
 <div class="container">
+  <div class="col-lg-12">
+  </div>
+</div>
+<!-- Adding new burgers -->
+<div class="container">
   <div class="col-sm-6 text-center">
-    <h4 class="text">Which burger would you like to try?</h4>
+    <h4 class="text">Try a new burger!</h4>
     <form class="button-size" action="/api/burgers" method="POST">
       <input type="text" class="text-center" id="insertBurger" name="burger_name"
         placeholder="Insert new burger"></input>
@@ -12,9 +22,10 @@
       </span>
     </form>
   </div>
+  <!-- Burger menu -->
   <div class="row">
     <div class="col-sm-6">
-      <h4 class="text-center burgereat">Burgers to Eat:</h4>
+      <h4 class="text-center burgermenu">Burgers to Devour:</h4>
       {{#each burger}} {{#unless this.devoured}}
       <form>
         <div class="input-group">
@@ -27,6 +38,7 @@
       </form>
       {{/unless}} {{/each}}
     </div>
+    <!-- Devoured burgers list -->
     <div class="col-sm-6">
       <h4 class="text-center eaten">Eaten Burgers:</h4>
       {{#each burger}} {{#if this.devoured}}
@@ -39,9 +51,9 @@
   </div>
   <br>
 </div>
+<!-- devour button code -->
 <script>
-
-  $(".eatBurger").click(function (event) {
+  $(".eatBurg").click(function (event) {
     event.preventDefault()
     let id = $(this).attr("data-id")
     console.log(id)
@@ -53,14 +65,3 @@
     })
   })
 </script>
-
-{{!-- <form class="addAburger">
-  <div class="form-group">
-    <label for="addNew">
-      <h3>Enter the next burger you want to make. </h3>
-    </label>
-    <input type="text" class="form-control add-new" id="addNewBurger" placeholder="Enter a burger here">
-    <br>
-    <button type="submit" class="btn btn-primary post"><i class="fas fa-plus-square"></i> Submit</button>
-
-</form> --}}
