--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -3,9 +3,10 @@
 
 <head>
     <title> Eat Tha Burger</title>
-    <!-- CSS/Google Fonts-->
+    <!-- CSS/Google Fonts/Animate-->
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="animate.min.css">
     <!-- JQuery-->
     <script src="https://code.jquery.com/jquery.js"></script>
     <!-- Bootstrap-->
