--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-image: url("http://www.sclance.com/backgrounds/burger-background/burger-background_461862.jpg");
+    background-image: url("../images/burger-black-background.jpg");
 }
  #animaterubberBand{
     text-align: center !important;
