--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,5 +1,6 @@
 body {
-    background-image: url("../images/burger-black-background.jpg");
+    background-image: url("https://img.freepik.com/free-photo/close-up-burger-with-stone-background_23-2148273030.jpg?size=626&ext=jpg1");
+    width: 100%;
 }
  #animaterubberBand{
     text-align: center !important;
