--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -4,7 +4,7 @@
 <head>
     <title> Eat Tha Burger</title>
     <!-- CSS/Google Fonts/Animate-->
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="/public/assets/css/style.css">
     <link href="https://fonts.googleapis.com/css?family=Kaushan+Script&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="animate.min.css">
     <!-- JQuery-->
