background still not showing

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -4,7 +4,7 @@ body {
 }
  #animaterubberBand{
     text-align: center !important;
-    color: white;
+    color: black;
     font-size: 60px;
     font-family: 'Kaushan Script', cursive;
 }
