--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,5 +1,5 @@
 body {
-    background-color: black;
+    background-image: url('../images/cartoon\ burger.jpg');
     width: 100%;
 }
  #animaterubberBand{
